--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,14 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.keitan</groupId>
-    <artifactId>first</artifactId>
-    <version>1.3-SNAPSHOT</version>
+    <groupId>jp.eximradar.keitan</groupId>
+    <artifactId>clock</artifactId>
+    <version>2.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>First</name>
+    <name>Clock</name>
 
-    <description>Sample</description>
+    <description>Time Check Tool</description>
     <properties>
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
