update: コマンドを変更

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -9,6 +9,6 @@ commands:
   ping:
     description: ping pong.
     usage: /ping
-  time:
+  clock:
     description: show now time.
-    usage: /time
+    usage: /clock
